All these done Refresh Token Support Refresh Token Rotation Session Management Role-Based Access Control (RBAC)